Fix document mode label color (Edit/view mode)
- in dark mode the lable is not visible
- this small patch will fix that

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -449,6 +449,7 @@ label.notebookbar.ui-checkbox-label {
 .has-label.has-dropdown:not(.inline) .unolabel {
 	display: inline-block;
 	clear: both;
+	color: var(--color-main-text);
 }
 
 /* adding focus to tab in notebookbar */
